--- a/frontend/admin/data_modul/soal.html
+++ b/frontend/admin/data_modul/soal.html
@@ -176,12 +176,12 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="pengabdian.html">
+                                        <a href="daftar_soal.html">
                                             <span class="sub-item">Daftar Soal</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="pengabdian.html">
+                                        <a href="file_manager.html">
                                             <span class="sub-item">File Manager</span>
                                         </a>
                                     </li>
