--- a/frontend/admin/data_modul/import_soal.html
+++ b/frontend/admin/data_modul/import_soal.html
@@ -171,17 +171,17 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="./data_modul/pengabdian.html">
+                                        <a href="import_soal.html">
                                             <span class="sub-item">Import Soal</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="./data_modul/pengabdian.html">
+                                        <a href="daftar_soal.html">
                                             <span class="sub-item">Daftar Soal</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="./data_modul/pengabdian.html">
+                                        <a href="file_manager.html">
                                             <span class="sub-item">File Manager</span>
                                         </a>
                                     </li>
